modify the greek letters post

--- a/public/404.html
+++ b/public/404.html
@@ -299,7 +299,7 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/greekletters/">Some useful Greek letters you might use on Rmarkdown</a></li>
+    <li><a href="/post/greekletters/">Some useful Greek letters you might use on your reports</a></li>
   </ul>
   
   <ul>
