--- a/public/index.html
+++ b/public/index.html
@@ -507,7 +507,7 @@ url('/img/headers/bubbles-wide.jpg');
             <i class="fa-li fa fa-graduation-cap"></i>
             <div class="description">
               <p class="course"></p>
-              <p class="institution">Professor R A Dayanada Gold Medalist, 2012</p>
+              <p class="institution">Professor R A Dayanada Gold Medalist and Batch first, 2012</p>
             </div>
           </li>
           
