--- a/public/index.html
+++ b/public/index.html
@@ -647,6 +647,10 @@ url('/img/headers/bubbles-wide.jpg');
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/thiyangt/JSM-2018">
+  Code
+</a>
+
 
 
 
@@ -687,6 +691,10 @@ url('/img/headers/bubbles-wide.jpg');
 </a>
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/thiyangt/useR-2018">
+  Code
+</a>
+
 
 
 
@@ -722,6 +730,10 @@ url('/img/headers/bubbles-wide.jpg');
 </a>
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/thiyangt/ISF-2018">
+  Code
+</a>
 
 
 
