--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -331,6 +331,10 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/thiyangt/JSM-2018">
+  Code
+</a>
+
 
 
 
@@ -371,6 +375,10 @@
 </a>
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/thiyangt/useR-2018">
+  Code
+</a>
+
 
 
 
@@ -406,6 +414,10 @@
 </a>
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/thiyangt/ISF-2018">
+  Code
+</a>
 
 
 
