--- a/public/talk/isf18-talk/index.html
+++ b/public/talk/isf18-talk/index.html
@@ -430,6 +430,10 @@ A crucial task in time series forecasting is the identification of the most suit
 
 
 
+<a class="btn btn-primary btn-outline" href="https://github.com/thiyangt/ISF-2018">
+  Code
+</a>
+
 
 
 
