--- a/public/talk/user18-talk/index.html
+++ b/public/talk/user18-talk/index.html
@@ -434,6 +434,10 @@ The seer package provides a novel framework for forecast model selection using t
 </a>
 
 
+<a class="btn btn-primary btn-outline" href="https://github.com/thiyangt/useR-2018">
+  Code
+</a>
+
 
 
 
