--- a/public/index.html
+++ b/public/index.html
@@ -1185,7 +1185,7 @@ url('/img/headers/bubbles-wide.jpg');
   
   
   <h3 class="article-title" itemprop="headline">
-    <a href="/post/parallelcomputing/" itemprop="url">parallel computing with R</a>
+    <a href="/post/parallelcomputing/" itemprop="url">Parallel computing with R</a>
   </h3>
   
 
