--- a/public/404.html
+++ b/public/404.html
@@ -311,7 +311,7 @@
   </ul>
   
   <ul>
-    <li><a href="/post/parallelcomputing/">parallel computing with R</a></li>
+    <li><a href="/post/parallelcomputing/">Parallel computing with R</a></li>
   </ul>
   
   <ul>
