--- a/public/index.html
+++ b/public/index.html
@@ -450,6 +450,8 @@ url('/img/headers/bubbles-wide.jpg');
 
 <p>I enjoy solving general data science problems from three different angles: theoretical, computational, applied. In this website you will find some of my work and interests on statistics and data analysis. I am also interested in R programming language.</p>
 
+<p>My sister <a href="https://prital.netlify.com/" target="_blank">Priyanga Dilini Talagala</a> is also a PhD candidate at Monash University, Australia.</p>
+
 
     <div class="row">
 
