--- a/public/index.html
+++ b/public/index.html
@@ -810,6 +810,10 @@ url('/img/headers/bubbles-wide.jpg');
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/thiyangt/YSC-2017">
+  Code
+</a>
+
 
 
 
