--- a/public/index.html
+++ b/public/index.html
@@ -492,7 +492,7 @@ url('/img/headers/bubbles-wide.jpg');
           <li>
             <i class="fa-li fa fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">Master of Science, 2015</p>
+              <p class="course">MSc in Financial Mathematics, 2015</p>
               <p class="institution">University of Moratuwa, Sri Lanka</p>
             </div>
           </li>
