add Beijing talk slides

--- a/public/talk/beijingtalk19-talk/index.html
+++ b/public/talk/beijingtalk19-talk/index.html
@@ -388,7 +388,7 @@ This work presents three feature-based algorithms for large-scale time series fo
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             
-            Central University of Finance and Economics
+            Central University of Finance and Economics, Beijing, China
             
           </div>
         </div>
@@ -424,7 +424,7 @@ This work presents three feature-based algorithms for large-scale time series fo
 
 
 
-<a class="btn btn-primary btn-outline" href="https://github.com/thiyangt/ISF-2017-Cairns-Australia">
+<a class="btn btn-primary btn-outline" href="/talks/beijingtalk2019.pdf">
   Slides
 </a>
 
