--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -316,7 +316,7 @@
   </div>
   <div class="talk-metadata">
     
-            Central University of Finance and Economics
+            Central University of Finance and Economics, Beijing, China
     
   </div>
   <div class="talk-links">
@@ -325,7 +325,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/thiyangt/ISF-2017-Cairns-Australia">
+<a class="btn btn-primary btn-outline btn-xs" href="/talks/beijingtalk2019.pdf">
   Slides
 </a>
 
