--- a/public/index.html
+++ b/public/index.html
@@ -635,7 +635,7 @@ url('/img/headers/bubbles-wide.jpg');
   </div>
   <div class="talk-metadata">
     
-            Central University of Finance and Economics
+            Central University of Finance and Economics, Beijing, China
     
   </div>
   <div class="talk-links">
@@ -644,7 +644,7 @@ url('/img/headers/bubbles-wide.jpg');
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/thiyangt/ISF-2017-Cairns-Australia">
+<a class="btn btn-primary btn-outline btn-xs" href="/talks/beijingtalk2019.pdf">
   Slides
 </a>
 
