add beijing talk code files

--- a/public/talk/beijingtalk19-talk/index.html
+++ b/public/talk/beijingtalk19-talk/index.html
@@ -430,6 +430,10 @@ This work presents three feature-based algorithms for large-scale time series fo
 
 
 
+<a class="btn btn-primary btn-outline" href="https://github.com/thiyangt/beijingTalk">
+  Code
+</a>
+
 
 
 
