--- a/public/index.html
+++ b/public/index.html
@@ -650,6 +650,10 @@ url('/img/headers/bubbles-wide.jpg');
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/thiyangt/beijingTalk">
+  Code
+</a>
+
 
 
 
