upload the slides of the talk

--- a/public/index.html
+++ b/public/index.html
@@ -884,6 +884,10 @@ url('/img/headers/bubbles-wide.jpg');
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="/talks/ysc2017.pdf">
+  Slides
+</a>
+
 
 
 
