--- a/public/talk/beijingtalk19-talk/index.html
+++ b/public/talk/beijingtalk19-talk/index.html
@@ -91,7 +91,7 @@ This work presents three feature-based algorithms for large-scale time series fo
   
   <meta property="og:site_name" content="THIYANGA TALAGALA">
   <meta property="og:url" content="/talk/beijingtalk19-talk/">
-  <meta property="og:title" content="Feature-based Time Series Forecasting | THIYANGA TALAGALA">
+  <meta property="og:title" content="Feature-based time series forecasting | THIYANGA TALAGALA">
   <meta property="og:description" content="Abstract
 This work presents three feature-based algorithms for large-scale time series forecasting. The algorithms are developed based on meta-learning approach. In our first algorithm we use a random forest algorithm to identify the best forecasting model. We call this framework FFORMS (Feature-based FORecast Model Selection). In the second algorithm, FFORMA (Feature-based FORecast Model Averaging), we use gradient boosting to obtain the weights for forecast combinations. The third algorithm use efficient Bayesian multivariate surface regression approach to estimate forecast error for each method, and then using the minimum predicted error to select a forecasting model or to choose individual models for forecast combinations.">
   <meta property="og:locale" content="en-us">
@@ -103,7 +103,7 @@ This work presents three feature-based algorithms for large-scale time series fo
 
   
 
-  <title>Feature-based Time Series Forecasting | THIYANGA TALAGALA</title>
+  <title>Feature-based time series forecasting | THIYANGA TALAGALA</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -305,7 +305,7 @@ This work presents three feature-based algorithms for large-scale time series fo
   <div class="article-container">
 
     <div class="pub-title">
-      <h1 itemprop="name">Feature-based Time Series Forecasting</h1>
+      <h1 itemprop="name">Feature-based time series forecasting</h1>
       <span class="pub-authors" itemprop="author">
         
       </span>
@@ -315,7 +315,7 @@ This work presents three feature-based algorithms for large-scale time series fo
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Feature-based%20Time%20Series%20Forecasting&amp;url=%2ftalk%2fbeijingtalk19-talk%2f"
+         href="https://twitter.com/intent/tweet?text=Feature-based%20time%20series%20forecasting&amp;url=%2ftalk%2fbeijingtalk19-talk%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -329,21 +329,21 @@ This work presents three feature-based algorithms for large-scale time series fo
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2ftalk%2fbeijingtalk19-talk%2f&amp;title=Feature-based%20Time%20Series%20Forecasting"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2ftalk%2fbeijingtalk19-talk%2f&amp;title=Feature-based%20time%20series%20forecasting"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2ftalk%2fbeijingtalk19-talk%2f&amp;title=Feature-based%20Time%20Series%20Forecasting"
+         href="http://service.weibo.com/share/share.php?url=%2ftalk%2fbeijingtalk19-talk%2f&amp;title=Feature-based%20time%20series%20forecasting"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Feature-based%20Time%20Series%20Forecasting&amp;body=%2ftalk%2fbeijingtalk19-talk%2f">
+         href="mailto:?subject=Feature-based%20time%20series%20forecasting&amp;body=%2ftalk%2fbeijingtalk19-talk%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
