--- a/public/talk/isf17-talk/index.html
+++ b/public/talk/isf17-talk/index.html
@@ -91,7 +91,7 @@ Many applications require a large number of time series to be forecast. Providin
   
   <meta property="og:site_name" content="THIYANGA TALAGALA">
   <meta property="og:url" content="/talk/isf17-talk/">
-  <meta property="og:title" content="Feature-based Model Selection for Time Series Forecasting | THIYANGA TALAGALA">
+  <meta property="og:title" content="Feature-based model selection for time series forecasting | THIYANGA TALAGALA">
   <meta property="og:description" content="Abstract
 Many applications require a large number of time series to be forecast. Providing better forecasts for these time series is important in decision and policy making. However, large scale time series data present numerous challenges in modelling and implementation due to the high dimensionality. It is unlikely that a single method will consistently provides better forecasts across all time series. On the other hand, selecting individual forecast models when the number of series is very large can be extremely challenging.">
   <meta property="og:locale" content="en-us">
@@ -103,7 +103,7 @@ Many applications require a large number of time series to be forecast. Providin
 
   
 
-  <title>Feature-based Model Selection for Time Series Forecasting | THIYANGA TALAGALA</title>
+  <title>Feature-based model selection for time series forecasting | THIYANGA TALAGALA</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -305,7 +305,7 @@ Many applications require a large number of time series to be forecast. Providin
   <div class="article-container">
 
     <div class="pub-title">
-      <h1 itemprop="name">Feature-based Model Selection for Time Series Forecasting</h1>
+      <h1 itemprop="name">Feature-based model selection for time series forecasting</h1>
       <span class="pub-authors" itemprop="author">
         
       </span>
@@ -315,7 +315,7 @@ Many applications require a large number of time series to be forecast. Providin
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Feature-based%20Model%20Selection%20for%20Time%20Series%20Forecasting&amp;url=%2ftalk%2fisf17-talk%2f"
+         href="https://twitter.com/intent/tweet?text=Feature-based%20model%20selection%20for%20time%20series%20forecasting&amp;url=%2ftalk%2fisf17-talk%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -329,21 +329,21 @@ Many applications require a large number of time series to be forecast. Providin
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2ftalk%2fisf17-talk%2f&amp;title=Feature-based%20Model%20Selection%20for%20Time%20Series%20Forecasting"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2ftalk%2fisf17-talk%2f&amp;title=Feature-based%20model%20selection%20for%20time%20series%20forecasting"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2ftalk%2fisf17-talk%2f&amp;title=Feature-based%20Model%20Selection%20for%20Time%20Series%20Forecasting"
+         href="http://service.weibo.com/share/share.php?url=%2ftalk%2fisf17-talk%2f&amp;title=Feature-based%20model%20selection%20for%20time%20series%20forecasting"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Feature-based%20Model%20Selection%20for%20Time%20Series%20Forecasting&amp;body=%2ftalk%2fisf17-talk%2f">
+         href="mailto:?subject=Feature-based%20model%20selection%20for%20time%20series%20forecasting&amp;body=%2ftalk%2fisf17-talk%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
