--- a/public/index.html
+++ b/public/index.html
@@ -999,7 +999,7 @@ url('/img/headers/bubbles-wide.jpg');
   
   
   <h3 class="article-title" itemprop="headline">
-    <a href="/post/multiplepkg/" itemprop="url">How to install and load multiple packages?</a>
+    <a href="/post/multiplepkg/" itemprop="url">How to install and load multiple packages at once?</a>
   </h3>
   
 
