--- a/public/index.html
+++ b/public/index.html
@@ -1051,7 +1051,7 @@ url('/img/headers/bubbles-wide.jpg');
 
   <div class="article-style" itemprop="articleBody">
     
-    <p>Install multiple R packages at once and/ check and install missing packages.</p>
+    <p>Install multiple R packages at once/ check and install missing packages.</p>
     
   </div>
   <p class="read-more" itemprop="mainEntityOfPage">
