update event url

--- a/public/talk/beijingtalk19-talk/index.html
+++ b/public/talk/beijingtalk19-talk/index.html
@@ -387,9 +387,9 @@ This work presents three feature-based algorithms for large-scale time series fo
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
-            
+            <a href="http://sam.cufe.edu.cn/info/1038/2398.htm" target="_blank" rel="noopener">
             Central University of Finance and Economics, Beijing, China
-            
+            </a>
           </div>
         </div>
       </div>
@@ -428,6 +428,10 @@ This work presents three feature-based algorithms for large-scale time series fo
   Slides
 </a>
 
+
+<a class="btn btn-primary btn-outline" href="http://sam.cufe.edu.cn/info/1038/2398.htm">
+  Video
+</a>
 
 
 <a class="btn btn-primary btn-outline" href="https://github.com/thiyangt/beijingTalk">
