--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -330,6 +330,10 @@
 </a>
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="http://sam.cufe.edu.cn/info/1038/2398.htm">
+  Video
+</a>
+
 
 <a class="btn btn-primary btn-outline btn-xs" href="https://github.com/thiyangt/beijingTalk">
   Code
