--- a/public/index.html
+++ b/public/index.html
@@ -656,6 +656,10 @@ url('/img/headers/bubbles-wide.jpg');
 </a>
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="http://sam.cufe.edu.cn/info/1038/2398.htm">
+  Video
+</a>
+
 
 <a class="btn btn-primary btn-outline btn-xs" href="https://github.com/thiyangt/beijingTalk">
   Code
