--- a/public/index.html
+++ b/public/index.html
@@ -542,7 +542,7 @@ url('/img/headers/bubbles-wide.jpg');
   <div class="col-xs-12 col-md-8">
     <p><p><i class="fa fa-cog fa-spin" style="color:Maroon"></i> <a href="https://github.com/thiyangt/seer" target="_blank">seer</a>: R package for feature-based time series forecasting.</p>
 
-<p><i class="fa fa-cog fa-spin" style="color:Maroon"></i> <a href="https://github.com/robjhyndman/tsfeatures" target="_blank">tsfeatures</a>: R package tsfeatures provides methods for extracting various features from time series data.</p>
+<p><i class="fa fa-cog fa-spin" style="color:Maroon"></i> <a href="https://github.com/robjhyndman/tsfeatures" target="_blank">tsfeatures</a>: R package tsfeatures provides methods for extracting various features from time series data.<a href="https://cran.r-project.org/package=tsfeatures" target="_blank"><img src="http://www.r-pkg.org/badges/version/tsfeatures" alt="CRAN\_Status\_Badge" /></a></p>
 
 <p><i class="fa fa-cog fa-spin" style="color:Maroon"></i> <a href="https://github.com/thiyangt/explainer" target="_blank">explainer</a>: Take a peek inside a random forest.</p>
 </p>
@@ -578,12 +578,14 @@ url('/img/headers/bubbles-wide.jpg');
     
   </div>
   <div class="col-xs-12 col-md-8">
-    <p><p><i class="fa fa-cog fa-spin" style="color:Maroon"></i> <a href="https://github.com/carlanetto/M4comp2018" target="_blank">m4comp2018</a>: R package for <a href="https://www.m4.unic.ac.cy/" target="_blank">M4 Competition</a> time series data</p>
+    <p><p><i class="fa fa-cog fa-spin" style="color:Maroon"></i> <a href="https://github.com/thiyangt/tea" target="_blank">tea</a>: R package for tea exporting countries</p>
 
 <p><i class="fa fa-cog fa-spin" style="color:Maroon"></i> <a href="https://github.com/thiyangt/mozzie" target="_blank">mozzie</a>: R package for dengue cases in Sri Lanka<a href="https://cran.r-project.org/package=mozzie" target="_blank"><img src="http://www.r-pkg.org/badges/version/mozzie" alt="CRAN\_Status\_Badge" /></a></p>
 
 <p><i class="fa fa-cog fa-spin" style="color:Maroon"></i> <a href="https://github.com/thiyangt/colmozzie" target="_blank">colmozzie</a>: R package for dengue cases and climate variables in Colombo Sri Lanka
 <a href="https://cran.r-project.org/package=colmozzie" target="_blank"><img src="http://www.r-pkg.org/badges/version/colmozzie" alt="CRAN_Status_Badge" /></a></p>
+
+<p><i class="fa fa-cog fa-spin" style="color:Maroon"></i> <a href="https://github.com/carlanetto/M4comp2018" target="_blank">m4comp2018</a>: R package for <a href="https://www.m4.unic.ac.cy/" target="_blank">M4 Competition</a> time series data</p>
 </p>
 
     
