minor changes to Greece talk

--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -316,7 +316,7 @@
   </div>
   <div class="talk-metadata">
     
-            The 39th International Symposium on Forecasting, 2019
+            The 39th International Symposium on Forecasting, 2019, Thessaloniki, Greece
     
   </div>
   <div class="talk-links">
