--- a/public/index.html
+++ b/public/index.html
@@ -1443,7 +1443,7 @@ url('/img/headers/bubbles-wide.jpg');
   <div class="col-xs-12 col-md-8">
     <p><i class="fa fa-asterisk fa-spin" style="color:red"></i> Teaching Associate, Monash University, Australia</p>
 
-<p><i class="fa fa-asterisk fa-spin" style="color:red"></i> Lecturer (Probationary), <a href="http://science.sjp.ac.lk/" target="_blank">Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura, Sri Lanka</a> (currently on study leave)</p>
+<p><i class="fa fa-asterisk fa-spin" style="color:red"></i> Lecturer, <a href="http://science.sjp.ac.lk/" target="_blank">Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura, Sri Lanka</a> (currently on study leave)</p>
 
   </div>
   
