add user2018 slides

--- a/public/talk/user18-talk/index.html
+++ b/public/talk/user18-talk/index.html
@@ -424,7 +424,7 @@ The seer package provides a novel framework for forecast model selection using t
 
 
 
-<a class="btn btn-primary btn-outline" href="/talks/user18.pdf">
+<a class="btn btn-primary btn-outline" href="/talks/useR2018.pdf">
   Slides
 </a>
 
