--- a/public/index.html
+++ b/public/index.html
@@ -784,7 +784,7 @@ url('/img/headers/bubbles-wide.jpg');
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/talks/user18.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="/talks/useR2018.pdf">
   Slides
 </a>
 
