--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -460,7 +460,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/talks/user18.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="/talks/useR2018.pdf">
   Slides
 </a>
 
