add useR2019 documents

--- a/public/talk/user19-talk/index.html
+++ b/public/talk/user19-talk/index.html
@@ -423,8 +423,12 @@ This work presents two feature-based forecasting algorithms for large-scale time
 
 
 
+<a class="btn btn-primary btn-outline" href="https://www.monash.edu/business/econometrics-and-business-statistics/research/publications/ebs/wp06-2018.pdf">
+  PDF
+</a>
 
-<a class="btn btn-primary btn-outline" href="/talks/user2019.pdf">
+
+<a class="btn btn-primary btn-outline" href="/talks/useR2019.pdf">
   Slides
 </a>
 
