--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -324,8 +324,12 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://www.monash.edu/business/econometrics-and-business-statistics/research/publications/ebs/wp06-2018.pdf">
+  PDF
+</a>
 
-<a class="btn btn-primary btn-outline btn-xs" href="/talks/user2019.pdf">
+
+<a class="btn btn-primary btn-outline btn-xs" href="/talks/useR2019.pdf">
   Slides
 </a>
 
