--- a/public/talk/isf18-talk/index.html
+++ b/public/talk/isf18-talk/index.html
@@ -258,7 +258,7 @@ A crucial task in time series forecasting is the identification of the most suit
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#hero"><span>Home</span></a>
+          <a class="nav-link " href="/#demo"><span>Home</span></a>
         </li>
 
         
