--- a/public/talk/user18-talk/index.html
+++ b/public/talk/user18-talk/index.html
@@ -258,7 +258,7 @@ The seer package provides a novel framework for forecast model selection using t
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#hero"><span>Home</span></a>
+          <a class="nav-link " href="/#demo"><span>Home</span></a>
         </li>
 
         
