--- a/public/talk/beijingtalk19-talk/index.html
+++ b/public/talk/beijingtalk19-talk/index.html
@@ -258,7 +258,7 @@ This work presents three feature-based algorithms for large-scale time series fo
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#hero"><span>Home</span></a>
+          <a class="nav-link " href="/#demo"><span>Home</span></a>
         </li>
 
         
