--- a/public/talk/isf17-talk/index.html
+++ b/public/talk/isf17-talk/index.html
@@ -258,7 +258,7 @@ Many applications require a large number of time series to be forecast. Providin
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#hero"><span>Home</span></a>
+          <a class="nav-link " href="/#demo"><span>Home</span></a>
         </li>
 
         
