--- a/public/talk/isf19-talk/index.html
+++ b/public/talk/isf19-talk/index.html
@@ -262,7 +262,7 @@ Features of time series are useful in identifying suitable forecast models. Tala
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#hero"><span>Home</span></a>
+          <a class="nav-link " href="/#demo"><span>Home</span></a>
         </li>
 
         
