--- a/public/talk/user19-talk/index.html
+++ b/public/talk/user19-talk/index.html
@@ -258,7 +258,7 @@ This work presents two feature-based forecasting algorithms for large-scale time
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#hero"><span>Home</span></a>
+          <a class="nav-link " href="/#demo"><span>Home</span></a>
         </li>
 
         
