--- a/public/talk/isf17-talk/index.html
+++ b/public/talk/isf17-talk/index.html
@@ -374,7 +374,7 @@ Many applications require a large number of time series to be forecast. Providin
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#posts"><span>Posts</span></a>
+          <a class="nav-link " href="/#posts"><span>Blog</span></a>
         </li>
 
         
