--- a/public/talk/isf18-talk/index.html
+++ b/public/talk/isf18-talk/index.html
@@ -374,7 +374,7 @@ A crucial task in time series forecasting is the identification of the most suit
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#posts"><span>Posts</span></a>
+          <a class="nav-link " href="/#posts"><span>Blog</span></a>
         </li>
 
         
