--- a/public/talk/isf19-talk/index.html
+++ b/public/talk/isf19-talk/index.html
@@ -378,7 +378,7 @@ Features of time series are useful in identifying suitable forecast models. Tala
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#posts"><span>Posts</span></a>
+          <a class="nav-link " href="/#posts"><span>Blog</span></a>
         </li>
 
         
