--- a/public/talk/user19-talk/index.html
+++ b/public/talk/user19-talk/index.html
@@ -374,7 +374,7 @@ This work presents two feature-based forecasting algorithms for large-scale time
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#posts"><span>Posts</span></a>
+          <a class="nav-link " href="/#posts"><span>Blog</span></a>
         </li>
 
         
