--- a/public/talk/beijingtalk19-talk/index.html
+++ b/public/talk/beijingtalk19-talk/index.html
@@ -374,7 +374,7 @@ This work presents three feature-based algorithms for large-scale time series fo
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#posts"><span>Posts</span></a>
+          <a class="nav-link " href="/#posts"><span>Blog</span></a>
         </li>
 
         
