--- a/public/talk/ssa17-talk/index.html
+++ b/public/talk/ssa17-talk/index.html
@@ -372,7 +372,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#posts"><span>Posts</span></a>
+          <a class="nav-link " href="/#posts"><span>Blog</span></a>
         </li>
 
         
