--- a/public/talk/user18-talk/index.html
+++ b/public/talk/user18-talk/index.html
@@ -374,7 +374,7 @@ The seer package provides a novel framework for forecast model selection using t
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#posts"><span>Posts</span></a>
+          <a class="nav-link " href="/#posts"><span>Blog</span></a>
         </li>
 
         
