add google analytics

--- a/public/talk/user18-talk/index.html
+++ b/public/talk/user18-talk/index.html
@@ -93,6 +93,14 @@ The seer package provides a novel framework for forecast model selection using t
 
 
   
+<script>
+  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','tstalagala@gmail.com');
+</script>
+
 
 
   
