changed about me

--- a/public/index.html
+++ b/public/index.html
@@ -680,11 +680,11 @@
     
     
 
-    <p>I am a PhD candidate in Statistics at <a href="https://www.monash.edu/" target="_blank">Monash University, Australia</a>. My PhD research focuses on the problem of forecasting large collections of time series. I am working with Professor <a href="https://robjhyndman.com/hyndsight/" target="_blank">Rob J Hyndman</a> and Professor <a href="https://research.monash.edu/en/persons/george-athanasopoulos" target="_blank">George Athanasopoulos</a>. I am a member of <a href="https://acems.org.au/our-people/thiyanga-talagala" target="_blank">ACEMS - ARC Centre of Excellence for Mathematical &amp; Statistical Frontiers</a>.</p>
+    <p>I am a Lecturer in the Department of Statistics, Faculty of Applied Sciences at the <a href="http://science.sjp.ac.lk/" target="_blank">University of Sri Jayewardenepura</a>. I received my PhD in Statistics from <a href="https://www.monash.edu/" target="_blank">Monash University, Australia</a> under the research title &ldquo;Computationally efficient forecasting methods for large-scale real-time applications&rdquo;. My thesis advisors were Professor <a href="https://robjhyndman.com/hyndsight/" target="_blank">Rob J Hyndman</a> and Professor <a href="https://research.monash.edu/en/persons/george-athanasopoulos" target="_blank">George Athanasopoulos</a>.</p>
 
 <p>I enjoy solving general data science problems from three different angles: theoretical, computational, applied. In this website you will find some of my work and interests on statistics and data analysis. I am also interested in R programming language.</p>
 
-<p>My sister <a href="https://prital.netlify.com/" target="_blank">Priyanga Dilini Talagala</a> is also a PhD candidate at Monash University, Australia.</p>
+<p><a href="https://prital.netlify.com/" target="_blank">Priyanga Dilini Talagala</a>  PhD in Statistics, Monash University, Australia is my sister.</p>
 
 
     <div class="row">
