--- a/public/index.html
+++ b/public/index.html
@@ -680,7 +680,7 @@
     
     
 
-    <p>I am a Lecturer in the Department of Statistics, Faculty of Applied Sciences at the <a href="http://science.sjp.ac.lk/" target="_blank">University of Sri Jayewardenepura</a>. I received my PhD in Statistics from <a href="https://www.monash.edu/" target="_blank">Monash University, Australia</a> under the research title &ldquo;Computationally efficient forecasting methods for large-scale real-time applications&rdquo;. My thesis advisors were Professor <a href="https://robjhyndman.com/hyndsight/" target="_blank">Rob J Hyndman</a> and Professor <a href="https://research.monash.edu/en/persons/george-athanasopoulos" target="_blank">George Athanasopoulos</a>.</p>
+    <p>I am a Lecturer in the Department of Statistics, Faculty of Applied Sciences at the <a href="http://science.sjp.ac.lk/" target="_blank">University of Sri Jayewardenepura</a>. I received my PhD in Statistics at <a href="https://www.monash.edu/" target="_blank">Monash University, Australia</a> in 2019 under the research title &ldquo;Computationally efficient forecasting methods for large-scale real-time applications&rdquo;. My thesis advisors were Professor <a href="https://robjhyndman.com/hyndsight/" target="_blank">Rob J Hyndman</a> and Professor <a href="https://research.monash.edu/en/persons/george-athanasopoulos" target="_blank">George Athanasopoulos</a>.</p>
 
 <p>I enjoy solving general data science problems from three different angles: theoretical, computational, applied. In this website you will find some of my work and interests on statistics and data analysis. I am also interested in R programming language.</p>
 
