updated project summary

--- a/public/index.html
+++ b/public/index.html
@@ -1099,6 +1099,10 @@
     <div class="card-text">
       <h4><a href="https://thiyangt.github.io/seer/" target="_blank" rel="noopener">Large-Scale Time Series Forecasting</a></h4>
       
+      <div class="article-style">
+        <p>Computationally efficient forecasting methods for large-scale real-time applications</p>
+      </div>
+      
     </div>
   </div>
 </div>
