--- a/public/project/timeseries/index.html
+++ b/public/project/timeseries/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="">
+  <meta name="description" content="Computationally efficient forecasting methods for large-scale real-time applications">
 
   
   <link rel="alternate" hreflang="en-us" href="/project/timeseries/">
@@ -122,7 +122,7 @@
   <meta property="og:site_name" content="THIYANGA TALAGALA">
   <meta property="og:url" content="/project/timeseries/">
   <meta property="og:title" content="Large-Scale Time Series Forecasting | THIYANGA TALAGALA">
-  <meta property="og:description" content=""><meta property="og:image" content="/project/timeseries/featured.jpg">
+  <meta property="og:description" content="Computationally efficient forecasting methods for large-scale real-time applications"><meta property="og:image" content="/project/timeseries/featured.jpg">
   <meta property="twitter:image" content="/project/timeseries/featured.jpg"><meta property="og:locale" content="en-us">
   
     
@@ -176,7 +176,7 @@
       "url": "/img/icon-512.png"
     }
   },
-  "description": ""
+  "description": "Computationally efficient forecasting methods for large-scale real-time applications"
 }
 </script>
 
