--- a/public/index.html
+++ b/public/index.html
@@ -682,7 +682,7 @@
 
     <p>I am a Lecturer in the Department of Statistics, Faculty of Applied Sciences at the <a href="http://science.sjp.ac.lk/" target="_blank">University of Sri Jayewardenepura</a>. I received my PhD in statistics from <a href="https://www.monash.edu/" target="_blank">Monash University, Australia</a> in 2019. My thesis advisors were Professor <a href="https://robjhyndman.com/hyndsight/" target="_blank">Rob J Hyndman</a> and Professor <a href="https://research.monash.edu/en/persons/george-athanasopoulos" target="_blank">George Athanasopoulos</a>.</p>
 
-<p>I enjoy solving general data science problems from three different angles: theoretical, computational, applied. On this website you will find some of my work and interests on statistics and data analysis. My research focuses on developing new statistical machine learning tools to help both practitioners and theoreticians make more open, explainable and reproducible data-driven discoveries. I am also interested in R programming language.</p>
+<p>I enjoy solving general data science problems from three different angles: theoretical, computational, applied. On this website you will find some of my work and interests in statistics and data analysis. My research focuses on developing new statistical machine learning tools to help both practitioners and theoreticians make more open, explainable and reproducible data-driven discoveries. I am also interested in R programming language.</p>
 
 <p><a href="https://prital.netlify.com/" target="_blank">Priyanga Dilini Talagala</a>  PhD in Statistics, Monash University, Australia is my sister.</p>
 
