changed powered by

--- a/public/project/dengue/index.html
+++ b/public/project/dengue/index.html
@@ -598,7 +598,7 @@
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 723px;">
   <div style="position: relative">
     <img src="/project/dengue/featured_hu4c72233f83ff69cc9ea80029ab194322_609053_720x0_resize_q90_lanczos.jpg" alt="" class="featured-image">
-    <span class="article-header-caption"><a href="https://pixabay.com/illustrations/aedes-aegypti-cartoon-illustration-1351001/" target="_blank">https://pixabay.com/illustrations/aedes-aegypti-cartoon-illustration-1351001/</a></span>
+    <span class="article-header-caption"><a href="https://pixabay.com/illustrations/aedes-aegypti-cartoon-illustration-1351001/">https://pixabay.com/illustrations/aedes-aegypti-cartoon-illustration-1351001/</a></span>
   </div>
 </div>
 
@@ -988,7 +988,7 @@
   <p class="powered-by">
     
 
-    Powered by the
+    © 2016-2020 Thiyanga S Talagala: Powered by
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
     <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.
 
