--- a/public/project/timeseries/index.html
+++ b/public/project/timeseries/index.html
@@ -598,7 +598,7 @@
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
   <div style="position: relative">
     <img src="/project/timeseries/featured_huf5714fd75e2557067e2dbd6dd3529f66_755880_720x0_resize_q90_lanczos.jpg" alt="" class="featured-image">
-    <span class="article-header-caption"><a href="https://pixabay.com/" target="_blank">https://pixabay.com/</a></span>
+    <span class="article-header-caption"><a href="https://pixabay.com/">https://pixabay.com/</a></span>
   </div>
 </div>
 
@@ -988,7 +988,7 @@
   <p class="powered-by">
     
 
-    Powered by the
+    © 2016-2020 Thiyanga S Talagala: Powered by
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
     <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.
 
