--- a/public/publication/conference-paper/index.html
+++ b/public/publication/conference-paper/index.html
@@ -686,7 +686,7 @@
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
   <div style="position: relative">
     <img src="/publication/conference-paper/featured_hu3d03a01dcc18bc5be0e67db3d8d209a6_312700_720x0_resize_q90_lanczos.jpg" alt="" class="featured-image">
-    <span class="article-header-caption">Image credit: <a href="https://unsplash.com/photos/pLCdAaMFLTE" target="_blank"><strong>Unsplash</strong></a></span>
+    <span class="article-header-caption">Image credit: <a href="https://unsplash.com/photos/pLCdAaMFLTE"><strong>Unsplash</strong></a></span>
   </div>
 </div>
 
@@ -736,19 +736,9 @@
 
     <div class="space-below"></div>
 
-    <div class="article-style"><div class="alert alert-note">
-  <div>
-    Click the <em>Cite</em> button above to demo the feature to enable visitors to import publication metadata into their reference management software.
-  </div>
-</div>
-
-<div class="alert alert-note">
-  <div>
-    Click the <em>Slides</em> button above to demo Academic&rsquo;s Markdown slides feature.
-  </div>
-</div>
-
-<p>Supplementary notes can be added here, including <a href="https://sourcethemes.com/academic/docs/writing-markdown-latex/" target="_blank">code and math</a>.</p>
+    <div class="article-style"><!-- raw HTML omitted -->
+<!-- raw HTML omitted -->
+<p>Supplementary notes can be added here, including <a href="https://sourcethemes.com/academic/docs/writing-markdown-latex/">code and math</a>.</p>
 </div>
 
     
@@ -1119,7 +1109,7 @@
   <p class="powered-by">
     
 
-    Powered by the
+    © 2016-2020 Thiyanga S Talagala: Powered by
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
     <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.
 
