--- a/public/publication/preprint/index.html
+++ b/public/publication/preprint/index.html
@@ -679,7 +679,7 @@
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
   <div style="position: relative">
     <img src="/publication/preprint/featured_hu559a5add5185b02575aa8333502ab2cc_220813_720x0_resize_q90_lanczos.jpg" alt="" class="featured-image">
-    <span class="article-header-caption">Image credit: <a href="https://unsplash.com/photos/s9CC2SKySJM" target="_blank"><strong>Unsplash</strong></a></span>
+    <span class="article-header-caption">Image credit: <a href="https://unsplash.com/photos/s9CC2SKySJM"><strong>Unsplash</strong></a></span>
   </div>
 </div>
 
@@ -717,13 +717,8 @@
 
     <div class="space-below"></div>
 
-    <div class="article-style"><div class="alert alert-note">
-  <div>
-    Click the <em>Slides</em> button above to demo Academic&rsquo;s Markdown slides feature.
-  </div>
-</div>
-
-<p>Supplementary notes can be added here, including <a href="https://sourcethemes.com/academic/docs/writing-markdown-latex/" target="_blank">code and math</a>.</p>
+    <div class="article-style"><!-- raw HTML omitted -->
+<p>Supplementary notes can be added here, including <a href="https://sourcethemes.com/academic/docs/writing-markdown-latex/">code and math</a>.</p>
 </div>
 
     
@@ -1094,7 +1089,7 @@
   <p class="powered-by">
     
 
-    Powered by the
+    © 2016-2020 Thiyanga S Talagala: Powered by
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
     <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.
 
