--- a/public/index.html
+++ b/public/index.html
@@ -2408,7 +2408,7 @@ Many applications require a large number of time series to be forecast. Providin
       
       <li>
         <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
-        <span id="person-email">thiyanga.talagala@monash.edu</span>
+        <span id="person-email">ttalagala@sjp.ac.lk</span>
       </li>
       
 
