Add my course website

--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -460,7 +460,10 @@
 
 <div class="universal-wrapper">
   
-  <div class="article-style"><p>To be added</p>
+  <div class="article-style"><h1 id="2020">2020</h1>
+<ul>
+<li><a href="https://hellor.netlify.com/">STA 326 2.0 Programming and Data Analysis with R</a></li>
+</ul>
 </div>
   
   <ul class="list-unstyled">
