--- a/public/publication/conference-paper/index.html
+++ b/public/publication/conference-paper/index.html
@@ -923,7 +923,7 @@
       
     
     <li>
-      <a href="https://scholar.google.com.au/citations?user=19EsVzEAAAAJ&amp;hl=en&amp;oi=ao" target="_blank" rel="noopener">
+      <a href="https://scholar.google.com/citations?user=7cUtrWUAAAAJ&amp;hl=en&amp;oi=ao" target="_blank" rel="noopener">
         <i class="ai ai-google-scholar"></i>
       </a>
     </li>
