--- a/public/talk/user19-talk/index.html
+++ b/public/talk/user19-talk/index.html
@@ -826,7 +826,7 @@ algorithms involve computing a range of features of the time series which are th
       
     
     <li>
-      <a href="https://scholar.google.com.au/citations?user=19EsVzEAAAAJ&amp;hl=en&amp;oi=ao" target="_blank" rel="noopener">
+      <a href="https://scholar.google.com/citations?user=7cUtrWUAAAAJ&amp;hl=en&amp;oi=ao" target="_blank" rel="noopener">
         <i class="ai ai-google-scholar"></i>
       </a>
     </li>
