--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -462,7 +462,12 @@
   
   <div class="article-style"><h1 id="2020">2020</h1>
 <ul>
-<li><a href="https://hellor.netlify.com/">STA 326 2.0 Programming and Data Analysis with R</a></li>
+<li>
+<p><a href="https://hellor.netlify.com/">STA 326 2.0 Programming and Data Analysis with R</a></p>
+</li>
+<li>
+<p><a href="https://tsforecasting-thiyanga.netlify.com/about/">IM532 3.0 Applied Time Series Forecasting</a>, Stochastic Processes, and Statistical Quality Control</p>
+</li>
 </ul>
 </div>
   
