link special topics course outline

--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -468,6 +468,9 @@
 <li>
 <p><a href="https://tsforecasting-thiyanga.netlify.com/about/">IM 532 3.0 Applied Time Series Forecasting</a>, Stochastic Processes, and Statistical Quality Control</p>
 </li>
+<li>
+<p><a href="https://tstdataviz.netlify.com/slides/2020dataviz.pdf">STA 479 2.0 Special Topics in Statistics</a></p>
+</li>
 </ul>
 </div>
   
