--- a/public/index.html
+++ b/public/index.html
@@ -896,7 +896,8 @@
       
     </div>
     <div class="col-12 col-lg-8">
-      <p><!-- raw HTML omitted --><!-- raw HTML omitted --> <a href="https://github.com/thiyangt/seer">seer</a>: R package for feature-based time series forecasting.</p>
+      <p><!-- raw HTML omitted --><!-- raw HTML omitted --> <a href="https://github.com/thiyangt/seer">seer</a>: R package for feature-based time series forecasting.
+<a href="https://cran.r-project.org/package=mozzie"><img src="http://www.r-pkg.org/badges/version/mozzie" alt="CRAN\_Status\_Badge"></a></p>
 <p><!-- raw HTML omitted --><!-- raw HTML omitted --> <a href="https://github.com/robjhyndman/tsfeatures">tsfeatures</a>: R package tsfeatures provides methods for extracting various features from time series data.<a href="https://cran.r-project.org/package=tsfeatures"><img src="http://www.r-pkg.org/badges/version/tsfeatures" alt="CRAN\_Status\_Badge"></a></p>
 <p><!-- raw HTML omitted --><!-- raw HTML omitted --> <a href="https://github.com/thiyangt/explainer">explainer</a>: Take a peek inside a random forest.</p>
 
