add covid-19 blogpost

--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -461,6 +461,7 @@
 <div class="universal-wrapper">
   
   <div class="article-style"><h1 id="2020">2020</h1>
+<h2 id="semester-1">Semester 1</h2>
 <ul>
 <li>
 <p><a href="https://hellor.netlify.com/">STA 326 2.0 Programming and Data Analysis with R</a></p>
