--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -462,17 +462,130 @@
   
   <div class="article-style"><h1 id="2020">2020</h1>
 <h2 id="semester-1">Semester 1</h2>
+<p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
 <ul>
 <li>
 <p><a href="https://hellor.netlify.com/">STA 326 2.0 Programming and Data Analysis with R</a></p>
 </li>
 <li>
-<p><a href="https://tsforecasting-thiyanga.netlify.com/about/">IM 532 3.0 Applied Time Series Forecasting</a>, Stochastic Processes, and Statistical Quality Control</p>
-</li>
-<li>
 <p><a href="https://tstdataviz.netlify.com/slides/2020dataviz.pdf">STA 479 2.0 Special Topics in Statistics</a></p>
 </li>
 </ul>
+<p>Department of Mathematics, Faculty of Applied Sciences, USJ</p>
+<ul>
+<li><a href="https://tsforecasting-thiyanga.netlify.com/about/">IM 532 3.0 Applied Time Series Forecasting</a>, Stochastic Processes, and Statistical Quality Control</li>
+</ul>
+<h1 id="2016---2019">2016 - 2019</h1>
+<p>(PhD, reading)</p>
+<h2 id="monash-university-australia-teaching">Monash University, Australia (Teaching)</h2>
+<ul>
+<li>
+<p><a href="https://www3.monash.edu/pubs/2019handbooks/units/ETC5242.html">ETC 5242: Statistical Thinking</a></p>
+</li>
+<li>
+<p><a href="https://www3.monash.edu/pubs/2018handbooks/units/ETC2420.html">ETC 2420 - Statistical Thinking</a></p>
+</li>
+<li>
+<p><a href="https://www3.monash.edu/pubs/2019handbooks/units/ETC1000.html">ETC1000 - Business and Economic Statistics</a></p>
+</li>
+</ul>
+<h1 id="2015">2015</h1>
+<h2 id="semester-2">Semester 2</h2>
+<p>Department of Statistics, Faculty of Applied Sciences, USJ</p>
+<ul>
+<li>
+<p><a href="/CO/2015s2/STA123_20_2015_s2.pdf">STA 123 2.0 Probability and Distribution Theory II</a></p>
+</li>
+<li>
+<p><a href="/CO/2015s2/STA22420_2015_s2.pdf">STA 224 2.0 Regression Analysis</a></p>
+</li>
+</ul>
+<h2 id="semester-1-1">Semester 1</h2>
+<p>Department of Statistics, Faculty of Applied Sciences, USJ</p>
+<ul>
+<li>
+<p><a href="/CO/2015s2/STA114tpdf.pdf">STA 114 2.0 Probability and Distribution Theory I</a></p>
+</li>
+<li>
+<p><a href="/CO/2014s2/STA_315_2014_S2.pdf">STA 315 2.0 Programming and Data Analysis with R</a></p>
+</li>
+</ul>
+<h1 id="2014">2014</h1>
+<h2 id="semester-2-1">Semester 2</h2>
+<p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
+<ul>
+<li>
+<p><a href="/CO/2014s2/STA_123_2014_2.0.pdf">STA 123 2.0 Probability and Distribution Theory I</a></p>
+</li>
+<li>
+<p><a href="/CO/2014s2/STA_315_2014_S2.pdf">STA 315 2.0 Programming and Data Analysis with R</a></p>
+</li>
+</ul>
+<p>Department of Botany, Faculty of Applied Sciences, USJ</p>
+<ul>
+<li><a href="/CO/2014s2/PBTMBL_2014_s2.pdf">PBT/ PBL/ MBL 387 2.0 Biostatistics and Computer Applications</a></li>
+</ul>
+<h2 id="semester-1-2">Semester 1</h2>
+<p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
+<ul>
+<li>
+<p><a href="/CO/2014s1/2014_s1_probability.pdf">STA 114 2.0 Probability and Distribution Theory</a></p>
+</li>
+<li>
+<p><a href="/CO/2014s1/STA21120_2014_s1.pdf">STA 211 2.0 Sampling Techniques</a></p>
+</li>
+<li>
+<p>STA 318 2.0 Advanced Probability and Distribution Theory</p>
+</li>
+</ul>
+<h1 id="2013">2013</h1>
+<h2 id="semester-2-2">Semester 2</h2>
+<p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
+<ul>
+<li>STA 215 1.5 Data Analysis II</li>
+</ul>
+<p>Department of Food Science and Technology, Faculty of Applied Sciences, USJ</p>
+<ul>
+<li>
+<p><a href="/CO/2013s2/FST25410-2013_s2.pdf">FST 254 1.0 Computer Applications for Food Sciences III</a></p>
+</li>
+<li>
+<p>FST 294 1.0 Statistics for Food Sciences II/ FST 351 1.0 Statistics for Food Science II</p>
+</li>
+</ul>
+<p>Department of Botany, Faculty of Applied Sciences, USJ</p>
+<ul>
+<li><a href="/CO/2013s2/MBL38620BiostatisticsANDComputerApplications2013s2.pdf">MBL 386 2.0 Biostatistics and Computer Applications</a></li>
+</ul>
+<p>B.Pharm Degree Programme, Faculty of Medical Sciences, USJ</p>
+<ul>
+<li><a href="/CO/2013s2/BPharmBioStatistics_2013_s2.pdf">Biostatistics</a></li>
+</ul>
+<h2 id="semester-1-3">Semester 1</h2>
+<p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
+<ul>
+<li>STA 112 3.0 Probability and Distribution Theory</li>
+</ul>
+<p>Department of Food Science and Technology, Faculty of Applied Sciences, USJ</p>
+<ul>
+<li>FST 284 1.0 Statistics for Food Sciences I</li>
+</ul>
+<p>Department of Botany, Faculty of Applied Sciences, USJ</p>
+<ul>
+<li>MBL 386 2.0 Biostatistics and Computer Applications</li>
+</ul>
+<p>Department of Medical Laboratory Science, Faculty of Medical Sciences, USJ</p>
+<h1 id="2012">2012</h1>
+<h2 id="semester-2-3">Semester 2</h2>
+<p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
+<ul>
+<li>STA 308 1.0 Medical Statistics</li>
+</ul>
+<p>Department of Food Science and Technology, Faculty of Applied Sciences, USJ</p>
+<p>Nursing Unit, Faculty of Medical Sciences, USJ</p>
+<h2 id="semester-1-4">Semester 1</h2>
+<p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
+<p>Department of Decision Science, Faculty of Management Studies and Commerce, USJ</p>
 </div>
   
   <ul class="list-unstyled">
