update teaching image

--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -460,7 +460,8 @@
 
 <div class="universal-wrapper">
   
-  <div class="article-style"><h1 id="2020">2020</h1>
+  <div class="article-style"><p><img src="/CO/education.jpg" alt=""></p>
+<h1 id="2020">2020</h1>
 <h2 id="semester-1">Semester 1</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
 <ul>
