--- a/public/project/datasets/index.html
+++ b/public/project/datasets/index.html
@@ -557,7 +557,7 @@
       <h1 id="dataset-1">Dataset 1</h1>
 <h2 id="consumers-use-of-food-labels">Consumers&rsquo; use of Food Labels</h2>
 <p>Food industry is one of the fastest moving industrial sectors. The glamorous and glittering retail shops and supermarkets are expanding very fast all over the country. The majority of food is pre-packed and presented to the consumer in a labelled container. This study was conducted to evaluate the consumers&rsquo; level of knowledge and use of information provided on food labels in making purchasing decisions. A structured questionnaire-based survey was used for the purpose of the study. This is a cross sectional study done over a period of five months from October, 2010 to March, 2011 with an average of seven interviews being conducted each week. The survey was conducted at supermarkets, retail shops of various sizes in five towns: Colombo 02, Kottawa, Maharagama, Nugegoda and Horana in Sri Lanka. A total of 586 respondents were considered for the study. The dataset and the questionnaire used in this studey can be downloaded from the following links. Please see the questionnaire for the column name description.</p>
-<p><a href="foodlabel.csv">Dataset: Consumers&rsquo; awareness and use of food label information</a></p>
+<p>Dataset: <a href="foodlabel.csv">foodlabel.csv</a></p>
 <p>[Questionnaire: Consumers&rsquo; awareness and use of food label information]</p>
 
     </div>
