--- a/public/index.html
+++ b/public/index.html
@@ -2005,7 +2005,7 @@ Many applications require a large number of time series to be forecast. Providin
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/post/statterms1/" >Parameter, Statistics, Random Variable, Estimator and Estimate</a>
+      <a href="/post/statterms1/" >Parameter, Statistic, Random Variable, Estimator and Estimate</a>
     </h3>
 
     
