--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -28,7 +28,8 @@
   
     
   
-  <meta name="description" content="&hellip;">
+  <meta name="description" content="Available via license: CC BY 4.0
+Content may be subject to copyright.">
 
   
   <link rel="alternate" hreflang="en-us" href="/privacy/">
@@ -123,7 +124,8 @@
   <meta property="og:site_name" content="THIYANGA TALAGALA">
   <meta property="og:url" content="/privacy/">
   <meta property="og:title" content="Privacy Policy | THIYANGA TALAGALA">
-  <meta property="og:description" content="&hellip;"><meta property="og:image" content="/img/icon-192.png">
+  <meta property="og:description" content="Available via license: CC BY 4.0
+Content may be subject to copyright."><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
@@ -503,7 +505,8 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>&hellip;</p>
+      <p>Available via license: CC BY 4.0</p>
+<p>Content may be subject to copyright.</p>
 
     </div>
 
