--- a/public/index.html
+++ b/public/index.html
@@ -2010,7 +2010,7 @@ Many applications require a large number of time series to be forecast. Providin
 
     
     <div class="article-style">
-      Checks whether your package name is taken before building it !!
+      Checks whether your package name is taken or available !!
 install.packages(&quot;available&quot;) library(available) …
     </div>
     
