--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -462,6 +462,9 @@
   
   <div class="article-style"><p><img src="/CO/education.jpg" alt=""></p>
 <h1 id="2020">2020</h1>
+<h2 id="semester-2-to-begin">Semester 2 (To begin)</h2>
+<p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
+<p><a href="https://thiyanga.netlify.app/courses/regression.msc/">STA 506 2.0 Linear Regression Analysis</a></p>
 <h2 id="semester-1">Semester 1</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
 <ul>
