--- a/public/courses/regression.msc/index.html
+++ b/public/courses/regression.msc/index.html
@@ -467,6 +467,11 @@
   </div>
   
   <div class="docs-toc-item">
+    <a class="docs-toc-link" href="/courses/regression.msc/example2/">Programming with R</a>
+
+  </div>
+  
+  <div class="docs-toc-item">
     <a class="docs-toc-link" href="/courses/regression.msc/example1/">Schedule</a>
 
   </div>
@@ -506,7 +511,6 @@
 <p>Postgraduate Certificate Program in Applied Statistics, Department of Statistics, University of Sri Jayewardenepura.</p>
 <h2 id="course-information">Course information</h2>
 <p>Course outline: here</p>
-<p>Course webpage: hellor.netlify.com</p>
 <p>Year and Semester: 2020 - Semester 1</p>
 <p>Course meeting time: Saturday, 2.00pm - 4.00pm</p>
 <p>Location: Online/ LCS 2, Faculty of Applied Sciences, USJ</p>
