--- a/public/courses/rprogramming.msc/index.html
+++ b/public/courses/rprogramming.msc/index.html
@@ -471,26 +471,6 @@
 
   </div>
   
-  <div class="docs-toc-item">
-    <a class="docs-toc-link" href="/courses/rprogramming.msc/installation/">Installation</a>
-
-  </div>
-  
-  <div class="docs-toc-item">
-    <a class="docs-toc-link" href="/courses/regression.pgc/example2/">Programming with R</a>
-
-  </div>
-  
-  <div class="docs-toc-item">
-    <a class="docs-toc-link" href="/courses/rprogramming.msc/schedule/">Roadmap</a>
-
-  </div>
-  
-  <div class="docs-toc-item">
-    <a class="docs-toc-link" href="/courses/regression.pgc/example1/">Schedule</a>
-
-  </div>
-  
   
 </nav>
 
@@ -507,6 +487,8 @@
     <li><a href="#sta-517-30-programming-and-statistical-computing-with-r">STA 517 3.0 Programming and Statistical Computing with R</a></li>
     <li><a href="#course-information">Course information</a></li>
     <li><a href="#lecturer-in-charge">Lecturer-in-charge</a></li>
+    <li><a href="#getting-staeted-with-r-and-rstudio">Getting staeted with R and RStudio</a></li>
+    <li><a href="#schedule-and-lectorials">Schedule and Lectorials</a></li>
   </ul>
 </nav>
 
@@ -528,7 +510,7 @@
 <p>Course outline: here</p>
 <p>Year and Semester: 2020 - Semester 1</p>
 <p>Commencement date: 15 August 2020</p>
-<p>Course meeting time: Sunday, 10.15am - 1.15am</p>
+<p>Course meeting time: Sunday, 10.15am - 1.15pm</p>
 <p>Location: Online/ Stat Lab, Faculty of Applied Sciences, USJ</p>
 <p>Software: R programming language</p>
 <h2 id="lecturer-in-charge">Lecturer-in-charge</h2>
@@ -536,6 +518,14 @@
 <p>Email: <a href="mailto:ttalagala@sjp.ac.lk">ttalagala@sjp.ac.lk</a></p>
 <p>Office hours: Sunday 1:15pm – 2:15 pm. Email me for other times.</p>
 <p>E-mail is the best way to get in contact with me—I will respond to all course-related e-mails within 24 hours.</p>
+<h2 id="getting-staeted-with-r-and-rstudio">Getting staeted with R and RStudio</h2>
+<p><a href="https://cran.r-project.org/">Download R</a></p>
+<p><a href="https://rstudio.com/products/rstudio/download/">Download RStudio</a></p>
+<p>The first thing you need to do to get started with R is to install it on your computer. R works on pretty much every platform available, including the widely available Windows, Mac OS X, and Linux systems. If you want to watch a step-by-step tutorial on how to install R for Mac or Windows, you can watch these videos:</p>
+<p><a href="https://www.youtube.com/watch?v=Ohnk9hcxf9M&amp;feature=youtu.be">Installation R on Windows</a></p>
+<p><a href="https://www.youtube.com/watch?v=uxuuWXU-7UQ&amp;feature=youtu.be">Installing R on the Mac</a></p>
+<p>Next you can install Rstudio. Remember, you must have R already installed before installing Rstudio.</p>
+<h2 id="schedule-and-lectorials">Schedule and Lectorials</h2>
 
           </div>
 
