--- a/public/courses/regression.pgc/index.html
+++ b/public/courses/regression.pgc/index.html
@@ -471,26 +471,6 @@
 
   </div>
   
-  <div class="docs-toc-item">
-    <a class="docs-toc-link" href="/courses/rprogramming.msc/installation/">Installation</a>
-
-  </div>
-  
-  <div class="docs-toc-item">
-    <a class="docs-toc-link" href="/courses/regression.pgc/example2/">Programming with R</a>
-
-  </div>
-  
-  <div class="docs-toc-item">
-    <a class="docs-toc-link" href="/courses/rprogramming.msc/schedule/">Roadmap</a>
-
-  </div>
-  
-  <div class="docs-toc-item">
-    <a class="docs-toc-link" href="/courses/regression.pgc/example1/">Schedule</a>
-
-  </div>
-  
   
 </nav>
 
@@ -507,6 +487,18 @@
     <li><a href="#sta-506-20-linear-regression-analysis">STA 506 2.0 Linear Regression Analysis</a></li>
     <li><a href="#course-information">Course information</a></li>
     <li><a href="#lecturer-in-charge">Lecturer-in-charge</a></li>
+    <li><a href="#schedule-and-lectorials">Schedule and Lectorials</a>
+      <ul>
+        <li><a href="#week-1-4-lectures-online">Week 1-4: lectures (online)</a></li>
+        <li><a href="#week-5-6-discussionpractical-in-class">Week 5-6: Discussion/practical (in class)</a></li>
+        <li><a href="#week-7-mid-exam--in-class">Week 7: mid exam  (in class)</a></li>
+        <li><a href="#week-8-12--lectures-online">Week 8-12:  lectures (online)</a></li>
+        <li><a href="#week-13-14--discussionpractical-in-class">Week 13-14:  Discussion/practical (in class)</a></li>
+        <li><a href="#week-15-revision-in-class">Week 15: Revision (in class)</a></li>
+        <li><a href="#week-16-study-leave">Week 16: study leave</a></li>
+        <li><a href="#week-17-18-final-exam">Week 17-18: final exam</a></li>
+      </ul>
+    </li>
   </ul>
 </nav>
 
@@ -536,6 +528,30 @@
 <p>Email: <a href="mailto:ttalagala@sjp.ac.lk">ttalagala@sjp.ac.lk</a></p>
 <p>Office hours: Saturday 4:00pm – 5:00pm. Email me for other times.</p>
 <p>E-mail is the best way to get in contact with me—I will respond to all course-related e-mails within 24 hours.</p>
+<h2 id="schedule-and-lectorials">Schedule and Lectorials</h2>
+<h3 id="week-1-4-lectures-online">Week 1-4: lectures (online)</h3>
+<p><strong>Week 1</strong></p>
+<p><strong>Week 2</strong></p>
+<p><strong>Week 3</strong></p>
+<p><strong>Week 4</strong></p>
+<h3 id="week-5-6-discussionpractical-in-class">Week 5-6: Discussion/practical (in class)</h3>
+<p><strong>Week 5</strong></p>
+<p><strong>Week 6</strong></p>
+<h3 id="week-7-mid-exam--in-class">Week 7: mid exam  (in class)</h3>
+<p><strong>Week 7: Mid-semester Examination</strong></p>
+<h3 id="week-8-12--lectures-online">Week 8-12:  lectures (online)</h3>
+<p><strong>Week 8</strong></p>
+<p><strong>Week 9</strong></p>
+<p><strong>Week 10</strong></p>
+<p><strong>Week 11</strong></p>
+<p><strong>Week 12</strong></p>
+<h3 id="week-13-14--discussionpractical-in-class">Week 13-14:  Discussion/practical (in class)</h3>
+<p><strong>Week 13</strong></p>
+<p><strong>Week 14</strong></p>
+<h3 id="week-15-revision-in-class">Week 15: Revision (in class)</h3>
+<p><strong>Week 15</strong></p>
+<h3 id="week-16-study-leave">Week 16: study leave</h3>
+<h3 id="week-17-18-final-exam">Week 17-18: final exam</h3>
 
           </div>
 
