--- a/public/courses/regression.pgc/index.html
+++ b/public/courses/regression.pgc/index.html
@@ -461,13 +461,8 @@
   
   
   
-  <div class="docs-toc-item">
-    <a class="docs-toc-link" href="/courses/rprogramming.msc/">Course Info</a>
-
-  </div>
-  
   <div class="docs-toc-item active">
-    <a class="docs-toc-link" href="/courses/regression.pgc/">Home</a>
+    <a class="docs-toc-link" href="/courses/regression.pgc/">STA506</a>
 
   </div>
   
