--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -469,7 +469,7 @@
 <p><a href="https://hellor.netlify.com/courses/Rmsc2020">STA 517 3.0 Programming and Statistical Computing with R</a></p>
 </li>
 <li>
-<p><a href="https://hellor.netlify.com/courses/regression2020">STA 506 2.0 Linear Regression Analysis</a></p>
+<p><a href="https://thiyanga.netlify.app/courses/regression2020/">STA 506 2.0 Linear Regression Analysis</a></p>
 </li>
 </ul>
 <h2 id="semester-1">Semester 1</h2>
