--- a/public/courses/rmsc2020/index.html
+++ b/public/courses/rmsc2020/index.html
@@ -513,16 +513,16 @@
             <h2 id="sta-517-30-programming-and-statistical-computing-with-r">STA 517 3.0 Programming and Statistical Computing with R</h2>
 <p>MSc in Applied Statistics, Department of Statistics, University of Sri Jayewardenepura.</p>
 <h2 id="course-information">Course information</h2>
-<p>Course outline: here</p>
+<p>Course outline: <a href="/STA_517_3_0_Programming_and_Data_Analysis_with_R_MSc_2020.pdf">here</a></p>
 <p>Year and Semester: 2020 - Semester 1</p>
 <p>Commencement date: 15 August 2020</p>
-<p>Course meeting time: Saturday, 2.00pm - 4.00pm</p>
-<p>Location: Online/ Stat Lab 2, Faculty of Applied Sciences, USJ</p>
-<p><em>Please enrol in LMS for up-to-date information and announcements.</em></p>
+<p>Course meeting time: Sunday, 10.15am - 1.15pm</p>
+<p>Location: Online/ Stat Lab 1, Faculty of Applied Sciences, USJ</p>
+<p><em>Please enrol in Google classroom and LMS for up-to-date information and announcements.</em></p>
 <h2 id="contact-information">Contact Information</h2>
 <p><a href="https://thiyanga.netlify.app/">Dr Thiyanga S Talagala</a></p>
 <p>Email: <a href="mailto:ttalagala@sjp.ac.lk">ttalagala@sjp.ac.lk</a></p>
-<p>Office hours: Saturday 4:00pm – 5:00pm. Email me for other times.</p>
+<p>Office hours: Sunday 1.15pm – 2:15pm. Email me for other times.</p>
 <p>E-mail is the best way to get in contact with me—I will respond to all course-related e-mails within 24 hours.</p>
 
           </div>
